# pde-solver

./: .dockerignore  .gitignore  Dockerfile  README.md  equations.py  export_weights.py  index.html  main.py  model.py  package.json  pinn_model.py  pyproject.toml  requirements.txt  setup.bat  setup.sh
docs/: index.html
docs/weights/: advection.json  allen_cahn.json  burgers.json  burgers_shock.json  convection_diffusion.json  cubic_nls.json  heat.json  kdv.json  manifest.json  reaction_diffusion.json  wave.json
tests/: test_api.py  test_equations.py  test_model.py  test_training.py
